update to work with latest set

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "mocha-lcov-reporter": "*",
     "uglify-js": "*",
     "rijs.core": "*",
-    "rijs.data": "*",
-    "versioned": "*"
+    "rijs.data": "*"
   },
   "dependencies": {
     "utilise": "*"
